--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <title>Super Nintendo</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,500;0,600;0,700;1,400&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
@@ -19,13 +25,15 @@
             />
           </div>
           <div class="logo__container">
-            <img class="logo__img" src="img/logo-SF.png" />
+            <img
+              class="logo__img"
+              src="img/logo-SF.png"
+              alt="Super Famicom logo"
+            />
           </div>
         </div>
-        <h1>
-          Retro Gaming:
-          <span id="title">Super Nintendo Entertainment System (SNES)</span>
-        </h1>
+
+        <h1 id="title">The Super Nintendo</h1>
       </header>
 
       <main id="tribute-info">
@@ -113,7 +121,7 @@
                 width="512"
               />
               <figcaption>
-                <em>Donkey Kong Country (1994)</em> contains stunning visuals
+                <em>Donkey Kong Country (1994)</em>
               </figcaption>
             </figure>
           </div>
@@ -138,17 +146,14 @@
             </figure>
           </div>
         </section>
-
-        <h3 class="tribute-banner">Discover a piece of '90s history</h3>
-        <h3>
-          <a
-            id="tribute-link"
-            href="https://youtu.be/D9pGqba95oI"
-            target="_blank"
-            >watch top 10 SNES games</a
-          >
-        </h3>
       </main>
+
+      <footer>
+        <h3 class="tribute-banner">Discover a piece of '90s history</h3>
+        <a id="tribute-link" href="https://youtu.be/D9pGqba95oI" target="_blank"
+          >watch top 10 SNES games</a
+        >
+      </footer>
     </div>
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
   </body>
