--- a/index.html
+++ b/index.html
@@ -19,15 +19,16 @@
         <div class="logo">
           <div class="logo__container">
             <img
-              class="logo__img logo__img--top"
-              src="img/logo-SN.png"
+              class="logo__img"
+              src="https://github.com/orionseth/fccproject-1-tribute/blob/main/img/logo-SN.png?raw=true"
               alt="SNES logo"
             />
           </div>
+
           <div class="logo__container">
             <img
               class="logo__img"
-              src="img/logo-SF.png"
+              src="https://github.com/orionseth/fccproject-1-tribute/blob/main/img/logo-SF.png?raw=true"
               alt="Super Famicom logo"
             />
           </div>
@@ -38,88 +39,104 @@
 
       <main id="tribute-info">
         <section>
-          <h2>Best System Ever</h2>
           <div class="row">
             <div class="row__text">
+              <h2>Best System Ever</h2>
+
               <p>
-                The 16-bit Super Nintendo Entertainment System (SNES), or "Super
-                Famicom" as it is known in Japan, is regarded by many as the
-                best video game system of all time. The SNES was developed by
-                Nintendo and released in 1990 in Japan, 1991 in North America
-                and 1992 in Europe. It sold over 49 million units worldwide.
+                The 16-bit Super Nintendo Entertainment System (SNES), or Super
+                Famicom as it is known in Japan, is regarded by many as the best
+                video game system of all time.
+              </p>
+
+              <p>
+                It launched in 1990 in Japan, 1991 in North America and 1992 in
+                Europe, and sold over 49 million units worldwide.
               </p>
             </div>
+
             <figure id="img-div" class="row__fig">
               <img
                 id="image"
-                src="img/console-SN.jpg"
+                src="https://github.com/orionseth/fccproject-1-tribute/blob/main/img/console-SN.jpg?raw=true"
                 alt="Super Nintendo console"
               />
+
               <figcaption id="img-caption">
-                The North American Super Nintendo
+                North American Super Nintendo
               </figcaption>
             </figure>
           </div>
         </section>
 
         <section>
-          <h2>Games Library</h2>
           <div class="row">
             <div class="row__text">
+              <h2>Games Library</h2>
+
               <p>
                 Some of the greatest video games ever made were released on the
-                SNES during the 1990s. Around 717 games were released in North
-                America, 1485 in Japan and 521 in Europe. Although somewhat
-                outdated by today's high-tech standards, these games are still
-                widely sought after today and have:
+                SNES during the 1990s.
               </p>
+
+              <p>
+                Around 717 games were released in North America, 1485 in Japan
+                and 521 in Europe. Many of these games are still widely sought
+                after today and have:
+              </p>
+
               <ul>
                 <li>great audio and catchy soundtracks</li>
-                <li>colorful graphics and rich visuals</li>
-                <li>fun addictive gameplay</li>
-                <li>classic look and feel</li>
+                <li>colorful graphics</li>
+                <li>fun gameplay</li>
+                <li>classic design</li>
               </ul>
             </div>
+
             <figure class="row__fig">
               <img
-                src="img/chrono-trigger.png"
+                src="https://github.com/orionseth/fccproject-1-tribute/blob/main/img/chrono-trigger.png?raw=true"
                 alt="screenshot of Chrono Trigger gameplay"
                 height="448"
                 width="512"
               />
+
               <figcaption>
-                Opening scene from <em>Chrono Trigger (1995)</em>
+                <em>Chrono Trigger (1995)</em>
               </figcaption>
             </figure>
           </div>
         </section>
 
         <section>
-          <h2>Technical Specification</h2>
           <div class="row">
-            <div class="row__text">
-              <ul>
-                <li><strong>Media type:</strong> ROM cartridge</li>
-                <li><strong>Processor:</strong> 16-bit Ricoh 5A22 @3.58 MHz</li>
+            <div class="row__text row__text--specs">
+              <h2>Technical Specification</h2>
+
+              <ul class="specs">
+                <li><strong>Processor</strong>: 16-bit Ricoh @3.58 MHz</li>
                 <li>
-                  <strong>Memory:</strong> 128 KB RAM, with 64 KB SRAM for video
-                  and audio
+                  <strong>Memory</strong>: 128 KB RAM, 64 KB SRAM for video /
+                  audio
                 </li>
                 <li>
-                  <strong>Video:</strong> 8 mode Picture Processing Unit (PPU),
-                  15-bit RGB palette
+                  <strong>Video</strong>: 8 mode Picture Processing Unit, 15-bit
+                  color
                 </li>
-                <li><strong>Audio:</strong> Sony S-SMP soundchip</li>
-                <li><strong>Controller Ports:</strong> 2</li>
+                <li><strong>Audio</strong>: Sony S-SMP soundchip</li>
+                <li><strong>Media type</strong>: ROM cartridge</li>
+                <li><strong>Controller Ports</strong>: 2</li>
               </ul>
             </div>
+
             <figure class="row__fig">
               <img
-                src="img/dkc.jpg"
+                src="https://www.mobygames.com/images/shots/l/100330-donkey-kong-country-snes-screenshot-blue-diddy-this-is-a-other.jpg"
                 alt="screenshot of Donkey Kong Country gameplay"
                 height="448"
                 width="512"
               />
+
               <figcaption>
                 <em>Donkey Kong Country (1994)</em>
               </figcaption>
@@ -128,33 +145,41 @@
         </section>
 
         <section>
-          <h2>Lifecycle End</h2>
           <div class="row">
             <div class="row__text">
+              <h2>Lifecycle End</h2>
+
               <p>
                 Games development continued in Japan for the Super Famicom well
-                into the late 90s. The last Super Famicom game made,
-                <em>Metal Slader Glory - Director's Cut</em>, was released in
-                Japan in late 2000. Producition of the Super Famicom console was
-                discontinued several years later in 2003, when Nintendo ran out
-                of parts to manufacture the system.
+                into the 90s, and the last game was released in late 2000.
+              </p>
+
+              <p>
+                Producition of the Super Famicom console was discontinued in
+                2003, when Nintendo ran out of parts to manufacture the system.
               </p>
             </div>
+
             <figure class="row__fig">
-              <img src="img/console-SF.jpg" alt="Super Famicom console" />
-              <figcaption>The Japanese Super Famicom</figcaption>
+              <img
+                src="https://github.com/orionseth/fccproject-1-tribute/blob/main/img/console-SF.jpg?raw=true"
+                alt="Super Famicom console"
+              />
+
+              <figcaption>Japanese Super Famicom</figcaption>
             </figure>
           </div>
         </section>
       </main>
 
       <footer>
-        <h3 class="tribute-banner">Discover a piece of '90s history</h3>
+        <h3 class="tribute-banner">Discover 90s history</h3>
+
         <a id="tribute-link" href="https://youtu.be/D9pGqba95oI" target="_blank"
-          >watch top 10 SNES games</a
+          >watch top 10 SNES games &rarr;</a
         >
       </footer>
     </div>
-    <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
+    <!-- <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script> -->
   </body>
 </html>
