--- a/index.html
+++ b/index.html
@@ -13,22 +13,19 @@
     />
     <link rel="stylesheet" href="style.css" />
   </head>
+
   <body>
     <div id="main" class="container">
       <header>
         <div class="logo">
           <div class="logo__container">
-            <img
-              class="logo__img"
-              src="https://github.com/orionseth/fccproject-1-tribute/blob/main/img/logo-SN.png?raw=true"
-              alt="SNES logo"
-            />
+            <img class="logo__img" src="img/logo-SN.png" alt="SNES logo" />
           </div>
 
           <div class="logo__container">
             <img
               class="logo__img"
-              src="https://github.com/orionseth/fccproject-1-tribute/blob/main/img/logo-SF.png?raw=true"
+              src="img/logo-SF.png"
               alt="Super Famicom logo"
             />
           </div>
@@ -58,7 +55,7 @@
             <figure id="img-div" class="row__fig">
               <img
                 id="image"
-                src="https://github.com/orionseth/fccproject-1-tribute/blob/main/img/console-SN.jpg?raw=true"
+                src="img/console-SN.jpg"
                 alt="Super Nintendo console"
               />
 
@@ -95,7 +92,7 @@
 
             <figure class="row__fig">
               <img
-                src="https://github.com/orionseth/fccproject-1-tribute/blob/main/img/chrono-trigger.png?raw=true"
+                src="img/chrono-trigger.png"
                 alt="screenshot of Chrono Trigger gameplay"
                 height="448"
                 width="512"
@@ -131,7 +128,7 @@
 
             <figure class="row__fig">
               <img
-                src="https://www.mobygames.com/images/shots/l/100330-donkey-kong-country-snes-screenshot-blue-diddy-this-is-a-other.jpg"
+                src="img/dkc.jpg"
                 alt="screenshot of Donkey Kong Country gameplay"
                 height="448"
                 width="512"
@@ -161,10 +158,7 @@
             </div>
 
             <figure class="row__fig">
-              <img
-                src="https://github.com/orionseth/fccproject-1-tribute/blob/main/img/console-SF.jpg?raw=true"
-                alt="Super Famicom console"
-              />
+              <img src="img/console-SF.jpg" alt="Super Famicom console" />
 
               <figcaption>Japanese Super Famicom</figcaption>
             </figure>
